testsuite/tests/dependent/should_fail/T17687.stderr

T17687.hs:5:6: error: [GHC-51580]
    • Illegal visible, dependent quantification in the type of a term:
        forall a -> a -> a
    • In the type signature: x :: forall a -> a -> a
    Suggested fix:
      Perhaps you intended to use the ‘RequiredTypeArguments’ extension
